# mage-ai

./: .bash_history  .dockerignore  .env.example  .env.harbor  .env.harbor.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.claritas  Dockerfile_prod  KAFKA_OAUTH_EXAMPLE.md  LICENSE  MANIFEST.in  Makefile  README.md  README_claritas.md  README_dev.md  SECURITY.md  SUMMARY.md  ai_updated.py  aws  call_data_loader.py  data_loader_mongo.py  dev.Dockerfile  dev.frontend.Dockerfile  dev.requirements.txt  dev.spark.Dockerfile  dev.ubuntu.Dockerfile  dev_requirements.txt  docker-compose.traefik.yml  docker-compose.yml  example.ipynb  example_newrelic.ini  get_messages.py  http_server.py  (+25 more)
mage_integrations/: MANIFEST.in  README.md  TEST_CONFIG.json  TEST_OUTPUT.jsonl  TEST_STATE.json  pyproject.toml  requirements.txt  setup.py
mage_integrations/connections/: base.py
mage_integrations/connections/amplitude/: __init__.py
mage_integrations/connections/google_analytics/: __init__.py  constants.py
mage_integrations/connections/mysql/: __init__.py
mage_integrations/connections/postgresql/: README.md  __init__.py
mage_integrations/connections/snowflake/: __init__.py
mage_integrations/connections/sql/: base.py
mage_integrations/connections/utils/: sql.py
mage_integrations/destinations/: base.py  constants.py  utils.py
mage_integrations/destinations/mysql/: README.md
mage_integrations/destinations/mysql/templates/: config.json
mage_integrations/destinations/postgresql/: README.md  __init__.py  utils.py
mage_integrations/destinations/snowflake/: README.md  __init__.py  utils.py
mage_integrations/destinations/snowflake/templates/: config.json
mage_integrations/destinations/sql/: base.py  utils.py
mage_integrations/mage_integrations/: MANIFEST.in  README.md  TEST_CONFIG_D.json  TEST_CONFIG_S.json  TEST_OUTPUT  requirements.txt
mage_integrations/mage_integrations/connections/: README.md  base.py  constants.py
mage_integrations/mage_integrations/connections/airtable/: __init__.py
mage_integrations/mage_integrations/connections/amplitude/: README.md  __init__.py  constants.py  utils.py
mage_integrations/mage_integrations/connections/bigquery/: __init__.py
mage_integrations/mage_integrations/connections/couchbase/: __init__.py
mage_integrations/mage_integrations/connections/doris/: __init__.py
mage_integrations/mage_integrations/connections/dremio/: __init__.py
mage_integrations/mage_integrations/connections/google_analytics/: README.md  __init__.py  constants.py  utils.py
mage_integrations/mage_integrations/connections/google_cloud_storage/: __init__.py
mage_integrations/mage_integrations/connections/google_search_console/: __init__.py
mage_integrations/mage_integrations/connections/google_sheets/: __init__.py
mage_integrations/mage_integrations/connections/impala/: __init__.py
mage_integrations/mage_integrations/connections/mssql/: __init__.py
mage_integrations/mage_integrations/connections/mysql/: __init__.py
mage_integrations/mage_integrations/connections/oracledb/: __init__.py
mage_integrations/mage_integrations/connections/postgresql/: __init__.py
mage_integrations/mage_integrations/connections/redshift/: __init__.py
mage_integrations/mage_integrations/connections/snowflake/: __init__.py
mage_integrations/mage_integrations/connections/sql/: base.py
mage_integrations/mage_integrations/connections/templates/: config.json
mage_integrations/mage_integrations/connections/teradata/: __init__.py
mage_integrations/mage_integrations/connections/trino/: __init__.py  connection_wrapper.py
mage_integrations/mage_integrations/connections/utils/: google.py
mage_integrations/mage_integrations/destinations/: README.md  base.py  constants.py  sink.py  sqlsink.py  target.py  utils.py
mage_integrations/mage_integrations/destinations/airtable/: Readme.md  __init__.py
mage_integrations/mage_integrations/destinations/amazon_s3/: README.md  __init__.py
mage_integrations/mage_integrations/destinations/bigquery/: README.md  __init__.py  constants.py  utils.py
mage_integrations/mage_integrations/destinations/clickhouse/: LICENSE  README.md  __init__.py
mage_integrations/mage_integrations/destinations/couchbase/: __init__.py  schema.py
mage_integrations/mage_integrations/destinations/delta_lake/: base.py  constants.py  raw_delta_table.py  schema.py  writer.py
mage_integrations/mage_integrations/destinations/delta_lake_azure/: README.md  __init__.py
mage_integrations/mage_integrations/destinations/delta_lake_s3/: README.md  __init__.py  utils.py
mage_integrations/mage_integrations/destinations/doris/: README.md  __init__.py  constants.py
mage_integrations/mage_integrations/destinations/elasticsearch/: README.md  __init__.py
mage_integrations/mage_integrations/destinations/gcs/: README.md  __init__.py  gcs.py
mage_integrations/mage_integrations/destinations/google_cloud_storage/: README.md  __init__.py
mage_integrations/mage_integrations/destinations/kafka/: README.md  __init__.py
mage_integrations/mage_integrations/destinations/mongodb/: README.md  (+1 more)
mage_integrations/mage_integrations/sources/: README.md  base.py  catalog.py  constants.py  messages.py  query.py  utils.py
mage_integrations/mage_integrations/transformers/: base.py  utils.py
mage_integrations/mage_integrations/utils/: array.py  dates.py  dictionary.py  enum.py  files.py  parsers.py  schema_helpers.py
mage_integrations/sources/: base.py  catalog.py  constants.py  messages.py  utils.py
mage_integrations/sources/amplitude/: README.md  __init__.py
mage_integrations/sources/google_analytics/: __init__.py  catalog.json
mage_integrations/sources/mysql/: README.md  __init__.py  utils.py
mage_integrations/sources/salesforce/: README.md  __init__.py
mage_integrations/sources/stripe/: README.md  __init__.py
mage_integrations/utils/: array.py  dictionary.py  parsers.py  schema_helpers.py
mage_integrations/utils/logger/: __init__.py  constants.py
(+15769 files in other folders)
