[tool.poetry]
name = "mage-ai"
version = "0.8.75-dev"
description = "DevEx poetry configuration"
authors = ["Mage"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
interrogate = "*"
commitizen = "*"
ipykernel = "^6.17.1"

[tool.ruff]
exclude = [
    "mage_ai/data_preparation/templates",
    "mage_ai/orchestration/db/migrations/versions",
]

line-length = 100
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "B006",
    "E501", 
    "W191",
    "T201",
    "F841"
]

select = [
    "E",
    "F",
    "W",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 18.
max-complexity = 18

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"