[metadata]
name = mage-ai
version = 0.0.1
description = Placeholder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masteria-ai/mage-ai
project_urls =
    Bug Tracker = https://github.com/masteria-ai/mage-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mage_ai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mage_ai