[project]
name = "mage-integrations"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {email = "eng@mage.ai"},
  {name = "Mage"}
]
maintainers = [
  {name = "Mage", email = "eng@mage.ai"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

dependencies = [
  'attrs==17.4.0',
  'azure-storage-blob==12.14.1',
  'backoff==2.0.0',
  'boto3',
  'botocore',
  'clickhouse_sqlalchemy',
  'couchbase==4.1.1',
  'deltalake==0.7.0',
  'facebook_business==17.0.2',
  'gnupg==2.3.1',
  'google-analytics-data==0.14.2',
  'google-api-python-client==2.70.0',
  'google-cloud-bigquery-storage==2.16.2',
  'google-cloud-bigquery~=3.0',
  'google-cloud-storage==2.5.0',
  'httpx[http2]==0.23.1',
  'joblib>=1.1.0',
  'jsonschema',
  'mysql-connector-python==8.0.31',
  'numpy>=1.21.0',
  'oracledb==1.3.1',
  'pandas>=1.3.0',
  'paramiko',
  'pendulum==2.1.0',
  'polars[xlsx2csv]<=0.19.2',
  'psycopg2-binary==2.9.3',
  'psycopg2==2.9.3',
  'pyarrow==10.0.1',
  'pymongo_schema==0.4.1',
  'pymongo==4.3.3',
  'pymssql==2.2.8',
  'python-dateutil==2.8.2',
  'python-magic',
  'pytz>=2022.1',
  'pyyaml~=6.0',
  'redshift-connector==2.0.909',
  'requests==2.27.1',
  'simple_salesforce',
  'simplejson==3.17.6',
  'singer_sdk==0.30.0',
  'singer-tap-tester',
  'snowflake-connector-python==2.7.9',
  'sqlalchemy',
  'sshtunnel==0.4.0',
  'stripe==4.2.0',
  'terminaltables==3.1.10',
  'trino==0.321.0',
  'twitter-ads',
  'typing-extensions',
  'tzlocal==4.2',
  'xmltodict==0.13.0',
  'zenpy==2.0.25',
]

[project.urls]
homepage = "https://mage.ai"
documentation = "https://docs.mage.ai"
repository = "https://github.com/mage-ai/mage-ai"
changelog = "https://github.com/mage-ai/mage-ai/releases"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mage_integrations"]
exclude = []
namespaces = false